Fixed some parts being too big which caused a horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+.background {
+  background-color: #121516;
+}
+
 #root {
-  max-width: 1280px;
   margin: 0;
   width: 100%;
   height: 100vh;
