--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.background {
-  background-color: #121516;
-}
-
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -73,24 +69,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
-
-h1 {
-  font-family: "Playfair Display";
-}
-
-p {
-  font-family: "Alice";
-}
-
-.photo{
-  filter: drop-shadow(30px 10px 4px #292929);
-}
-
-.column {
-    display: block;
-    flex-basis: 0;
-    flex-grow: 1;
-    flex-shrink: 1;
-    padding: 0.75rem;
 }
